feat:get user info
