# routes/api.php
@@ -6,8 +6,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['middleware' => 'auth:sanctum'], function () {
-    Route::get('/user', fn (Request $request) => $request->user())->name('user.show');
-    Route::get('/logout', [UserController::class, 'logout'])->name('user.logout');
+    Route::get('/user', [UserController::class, 'show'])->name('user.show');
+    Route::post('/logout', [UserController::class, 'logout'])->name('user.logout');
 });
 
 Route::prefix('/products')
